# projeto-SQLite_WillamesCampos

./: .gitignore  database.py  main.py  pyproject.toml  teste_SQLAlchemy.py
