[tool.poetry]
name = "projeto sqlite_willamescampos"
version = "0.1.0"
description = "Projeto de banco de dados usando SQLite do curso Programaçao Orientada a Objetos com Python 3"
authors = ["Willames <williames@arbache.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
